# apitest

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  template.py
.github/workflows/: ci.yaml
scripts/: generate_allure_env.py
src/razorpay/: __init__.py
src/razorpay/api/: __init__.py  base_client.py  orders.py
src/razorpay/config/: __init__.py  environments.py  settings.py
src/razorpay/models/: __init__.py  order_model.py
src/razorpay/utils/: __init__.py  allure_helpers.py  log_context.py  logger.py  test_helpers.py  validators.py
test_data/: allure_categories.json
test_data/schemas/: error_schema.json  order_list_schema.json  order_schema.json
tests/: conftest.py  test_parallel_safety.py
tests/orders/: conftest.py  test_create_order.py  test_fixture_verify.py  test_get_order.py  test_list_orders.py  test_order_schema.py  test_update_order.py
