[project]
name = "razorpay"
version = "1.0.0"
description = "Industry-level API automation testing for Razorpay"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "structlog>=25.5.0",
    "jsonschema>=4.26.0",
]

[dependency-groups]
test = [
    "allure-pytest>=2.16.0",
    "faker>=40.19.1",
    "pytest>=9.0.3",
    "pytest-rerunfailures>=16.3",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: Quick smoke tests",
    "regression: Full regression suite",
    "orders: Order related tests",
    "payments: Payment related tests",
    "refunds: Refund related tests",
    "negative: Negative/error path tests",
]
addopts = "-v --tb=short --strict-markers --alluredir=allure-results"
log_cli = true
log_cli_level = "INFO"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/razorpay"]
